# scratch

./: .gitignore  BUILD.bazel  Gopkg.toml  README.md  WORKSPACE
example/cmd/trivial/: BUILD.bazel  main.go
proto/: BUILD.bazel  test.pb.go  test.proto  test.validator.pb.go
