load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scratch_test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/mwitkow/go-proto-validators:validators_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "scratch_test_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@io_bazel_rules_go//proto:go_proto_validate",
    ],
    importpath = "github.com/rmrobinson-textnow/scratch/proto",
    proto = ":scratch_test_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/mwitkow/go-proto-validators:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":scratch_test_go_proto"],
    importpath = "github.com/rmrobinson-textnow/scratch/proto",
    visibility = ["//visibility:public"],
)
