load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson-textnow/scratch/example/cmd/trivial",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)

go_binary(
    name = "trivial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
